--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,7 +1,7 @@
 en:
   site_settings:
-    topic_group_button_enabled: "Enable topic group button plugin"
-    topic_group_button_url: "Button URL (&lt;USERNAME&gt; &lt;USER_ID&gt; and &lt;TOPIC_ID&gt; will be replaced)"
-    topic_group_button_title: "Button title"
-    topic_group_button_label: "Button label"
-    topic_group_button_allowed_group: "Button will only be visible to members of specified group"
+    topic_curation_enabled: "Enable topic curation button plugin"
+    topic_curation_title: "Button title"
+    topic_curation_label: "Button label"
+    topic_curation_allowed_group: "Button will only be visible to members of specified group"
+    topic_curation_form_title: "Form title"
