--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -5,3 +5,4 @@ en:
     topic_curation_label: "Button label"
     topic_curation_allowed_group: "Button will only be visible to members of specified group"
     topic_curation_form_title: "Form title"
+    topic_curation_group_names: "Enter the name of the groups"
