--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1,8 +1,7 @@
 en:
   site_settings:
-    topic_curation_enabled: "Enable topic curation button plugin"
+    topic_curation_enabled: "Enable topic curator plugin"
     topic_curation_title: "Button title"
     topic_curation_label: "Button label"
-    topic_curation_allowed_group: "Button will only be visible to members of specified group"
     topic_curation_form_title: "Form title"
     topic_curation_group_names: "Enter the name of the groups"
