action added to the cancel button and cancel_button_label variable added in the client.en.yml

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -2,4 +2,5 @@ en:
   js:
     curation_form:
       submit_button_label: "Submit"
+      cancel_button_label: "Cancel"
     topic_curation_form_title: "Curation Form"
